mysql/cli-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-cli
  namespace: db
spec:
  selector:
    matchLabels:
      app: mysql-cli
  template:
    metadata:
      labels:
        app: mysql-cli
    spec:
      containers:
        - name: mysql-cli
          image: registry.andreybondarenko.com/mysql-cli:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: my-private-registry
