mysql/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: v
  namespace: db
  labels:
    app: mysql
    tier: mysql
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: mysql
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
      tier: mysql
  template:
    metadata:
      labels:
        app: mysql
        tier: mysql
    spec:
      containers:
        - image: harbor.andreybondarenko.com/dockerhub/mysql:8.0.41
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          readinessProbe:
            tcpSocket:
              port: 3306
          resources:
            requests:
              cpu: "18m"
              memory: "1600Mi"
            limits:
              memory: "1600Mi"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-lh
