mysql/mysqld-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqld-exporter
  namespace: db
spec:
  selector:
    matchLabels:
      app: mysqld-exporter
  template:
    metadata:
      labels:
        app: mysqld-exporter
    spec:
      containers:
      - name: mysqld-exporter
        image: quay.io/prometheus/mysqld-exporter:main
        ports:
          - containerPort: 9104
            name: mysqld-exporter
        volumeMounts:
          - name: mysqld-exporter-cf
            mountPath: /.my.cnf
            subPath: .my.cnf
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:        
        - name: mysqld-exporter-cf
          configMap:
            name: mysqld-exporter
            items:
              - key: .my.cnf
                path: .my.cnf
