mysql/mysqld-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqld-exporter
  namespace: db
  labels:
    app: mysqld-exporter
spec:
  ports:
    - port: 9104
  selector:
    app: mysqld-exporter
